# feed

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: feeds.yaml
docs/plans/: 2026-02-12-caching-retry-design.md  2026-02-12-caching-retry-plan.md  2026-02-23-prompt-insights-pipeline-implementation.md  2026-02-28-copy-to-clipboard-plan.md  summarize-patterns-to-port.md
docs/project/: GIT_HISTORY_POLICY.md
docs/research/: research-guide-to-building-newletter-aggregation-agent.md
docs/sessions/: COMPACT_audit_and_rename_2026-01-25.md  COMPACT_delivery-implementation_2026-01-25.md  COMPACT_substack-digest-agent_2026-01-09.md
docs/setup/: 00-PROJECT-OVERVIEW.md  01-PHASE-SETUP.md  02-PHASE-INGEST.md  03-PHASE-ANALYZE.md  04-PHASE-DELIVER.md  05-PHASE-ORCHESTRATE.md  06-PHASE-POLISH.md  07-QUICK-REFERENCE.md
docs/system/: ARCHITECTURE.md  FEATURES.md  OPERATIONS.md  TEST_STRATEGY.md
docs/todo/: TODO.md
scripts/: healthcheck.py  list_models.py  preview_email.py  run_analyze.py  run_email.py  run_ingest.py  setup_cron.py  setup_launchd.py  verify_setup.py
src/: cli.py  config.py  logging_config.py  models.py
src/analyze/: __init__.py  digest_builder.py  prompts.py  summarizer.py
src/deliver/: __init__.py  email.py  (+1 more)
tests/: test_analyze.py  test_cache.py  test_cli_helpers.py  test_config.py  test_dead_code.py  test_deliver_renderer.py  test_email_sender.py  test_feeds_extra.py  test_gemini_client.py  test_ingest.py  test_llm.py  test_llm_provider_normalization.py  test_parser_extra.py  test_pricing.py  test_retry.py  test_scheduler.py  test_scheduler_extra.py
(+36 files in other folders)
